# spotify-music-player

./: .babelrc  .babelrc.js  .codeclimate.yml  .env  .env.development  .env.production  .env.test  .eslintignore  .eslintrc.js  .gitignore  .lighthouserc.json  .lintstagedrc.js  .lintstagedrc.json  .prettierrc.js  .stylelintrc.json  LICENSE.md  README.md  commitlint.config.js  index.html  index.tsx  jest.config.functions.js  jest.config.js  jest.setup.js  lerna.json  lighthouserc.json  netlify.toml  npmpackagejsonlint.config.js  package-lock.json  package.json  renovate.json  snowpack.config.mjs  tsconfig.json  web-test-runner.config.js
.github/: auto_assign.yml  dependabot.yml
.husky/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.netlify/: state.json
__fixtures__/: album.json  artist.json  playlist.json  track.json
lambda/: hello.ts
systems/http-api/: .dockerignore  .env.test  .lintstagedrc.json  .pylintrc  Dockerfile  README.md  conftest.py  docker-compose-dev.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
systems/http-api/app/: backend.py  config.py  frontend.py  main.py
systems/http-api/app/dependencies/: __init__.py  get_settings.py  get_spotify_api_client.py
systems/http-api/app/exception_handlers/: http_exception_handler.py  validation_exception_handler.py
systems/http-api/app/exceptions/: __init__.py  typed_http_exception.py
systems/http-api/app/routers/recommendation/: __init__.py  router.py
systems/http-api/app/routers/recommendation/services/: __init__.py  get_recent_played_artists.py  get_recent_played_tracks.py  get_recommend_albums.py  get_user_top_artists.py  get_user_top_artists_genres.py  get_user_top_tracks.py
systems/http-api/app/routers/recommendation/services/test/: test_get_user_top_artists_genres.py
systems/http-api/app/routers/recommendation/test/: test_read_recommendation_feed.py
systems/http-api/app/schemas/: __init__.py  error_response.py
systems/http-api/app/test/: test_exception_handler.py
systems/http-api/app/utils/: __init__.py  dedupe.py  flatten.py  test_dedupe.py  test_flatten.py
systems/http-api/scripts/: pre-push.sh  setup.sh
systems/http-api/scripts/ci/: build-and-deploy.sh  build.sh  deploy.sh  test.sh
systems/http-api/static/: .gitignore  sample-manifest.json
systems/http-api/templates/: index.html
systems/http-api/test_helpers/: __init__.py  use_mock_spotify_server.py
systems/http-api/test_helpers/dependencies/: __init__.py  get_settings.py  get_spotify_api_client.py
systems/http-api/test_helpers/fixtures/: __init__.py  test_app.py
systems/http-api/test_helpers/seeds/: __init__.py  track_object.py
systems/infrastructure/: Pulumi.dev.yaml  Pulumi.spotify-music-player.yaml  Pulumi.yaml  README.md  __main__.py  package.json  pyproject.toml
systems/infrastructure/gcp/: __init__.py  cloud_run.py  cloud_storage.py  container_registry.py  test_cloud_run.py  test_cloud_storage.py  test_container_registry.py
systems/infrastructure/scripts/: pre-push.sh
systems/infrastructure/scripts/ci/: setup.sh  test.sh
systems/infrastructure/simple-http-api/: Dockerfile  index.html
(+774 files in other folders)
