[tool.poetry]
name = "http-api"
version = "0.1.0"
description = ""
authors = ["David Ng <david.ng.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.72.0"}
python-dotenv = "^0.19.2"
httpx = {version = "^0.21.3"}
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest = "^6.2.5"
black = "^21.12b0"
ipython = "^8.0.0"
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"