[tool.poetry]
name = "http-api"
version = "0.1.0"
description = ""
authors = ["David Ng <david.ng.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}
python-dotenv = "^0.19.2"
httpx = {version = "^0.22.0"}
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest = "^7.0.0"
black = "^22.1"
ipython = "^8.0.1"
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"