[tool.poetry]
name = "http-api"
version = "0.1.0"
description = ""
authors = ["David Ng <david.ng.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.75.0"}
python-dotenv = "^0.20.0"
httpx = {version = "^0.22.0"}
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.13.0"
pytest = "^7.1.1"
black = "^22.1"
ipython = "^8.1.1"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"