[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["David Ng <david.ng.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.22.1"
pulumi-gcp = "^6.8.0"
pulumi-docker = "^3.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
