[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["David Ng <david.ng.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.26.1"
pulumi-gcp = "^6.17.0"
pulumi-docker = "^3.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.0"
black = "^22.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
